[package]
name = "swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.29.0"
anyhow = "1.0.75"
arrayref = { version = "0.3.6" }
bincode = "1.3.3"
bytemuck = "1.16.1"
clap = { version = "4.4.11", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.1"
futures-util = "0.3.30"
log = "0.4.20"
once_cell = "1"
rand = "0.8.5"
raydium_amm = { git = "https://github.com/reactive-biscuit/raydium-amm.git", branch = "patch/solana-v1.18.16", default-features = false, features = [
    "client",
] }
raydium-library = { git = "https://github.com/reactive-biscuit/raydium-library.git", branch = "u128-fix" } 
reqwest = { version = "0.11.22", features = ["json"] }
safe-transmute = "0.11.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
solana-account-decoder = "1.18.16"
solana-client = "1.18.16"
solana-program = "1.18.16"
solana-sdk = "1.18.16"
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"]}
spl-token = "3.2"
tokio = "1.35.0"
